--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -108,3 +108,30 @@ jobs:
 
           git tag -a "$TAG" -m "Version ${NEW_VERSION}"
           git push origin "$TAG"
+
+      - name: Package server for release
+        env:
+          NEW_VERSION: ${{ steps.compute.outputs.new_version }}
+        shell: bash
+        run: |
+          set -euo pipefail
+          cd MCPForUnity/UnityMcpServer~
+          zip -r ../../mcp-for-unity-server-v${NEW_VERSION}.zip .
+          cd ../..
+          ls -lh mcp-for-unity-server-v${NEW_VERSION}.zip
+          echo "Server package created: mcp-for-unity-server-v${NEW_VERSION}.zip"
+
+      - name: Create GitHub release with server artifact
+        env:
+          NEW_VERSION: ${{ steps.compute.outputs.new_version }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        shell: bash
+        run: |
+          set -euo pipefail
+          TAG="v${NEW_VERSION}"
+
+          # Create release
+          gh release create "$TAG" \
+            --title "v${NEW_VERSION}" \
+            --notes "Release v${NEW_VERSION}" \
+            "mcp-for-unity-server-v${NEW_VERSION}.zip#MCP Server v${NEW_VERSION}"
