--- a/MCPForUnity/UnityMcpServer~/src/pyproject.toml
+++ b/MCPForUnity/UnityMcpServer~/src/pyproject.toml
@@ -4,7 +4,12 @@ version = "6.0.0"
 description = "MCP for Unity Server: A Unity package for Unity Editor integration via the Model Context Protocol (MCP)."
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = ["httpx>=0.27.2", "mcp[cli]>=1.15.0"]
+dependencies = [
+ "httpx>=0.27.2",
+ "mcp[cli]>=1.17.0",
+ "pydantic>=2.12.0",
+ "tomli>=2.3.0",
+]
 
 [build-system]
 requires = ["setuptools>=64.0.0", "wheel"]
