--- a/MCPForUnity/UnityMcpServer~/src/pyproject.toml
+++ b/MCPForUnity/UnityMcpServer~/src/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest>=8.0.0",
-    "pytest-anyio>=0.6.0",
+    "pytest-asyncio>=0.23",
 ]
 
 [build-system]
