Allow the MCP server to be run by `uvx` remotely (#336)
* feat: add entry point script and additional Python modules to server package

Now we can run this server with `uvx`

* refactor: improve package version detection to support both installed and development environments

* refactor: simplify release workflow by removing server packaging step

--- a/MCPForUnity/UnityMcpServer~/src/pyproject.toml
+++ b/MCPForUnity/UnityMcpServer~/src/pyproject.toml
@@ -17,10 +17,23 @@ dev = [
     "pytest-asyncio>=0.23",
 ]
 
+[project.scripts]
+mcp-for-unity = "server:main"
+
 [build-system]
 requires = ["setuptools>=64.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-py-modules = ["config", "server", "unity_connection"]
-packages = ["tools"]
+py-modules = [
+    "config",
+    "models",
+    "module_discovery",
+    "port_discovery",
+    "reload_sentinel",
+    "server",
+    "telemetry",
+    "telemetry_decorator",
+    "unity_connection"
+]
+packages = ["tools", "resources", "registry"]
