--- a/TestProjects/UnityMCPTests/Packages/manifest.json
+++ b/TestProjects/UnityMCPTests/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.coplaydev.unity-mcp": "file:/Users/davidsarno/unity-mcp/MCPForUnity",
+    "com.coplaydev.unity-mcp": "https://github.com/coplaydev/unity-mcp.git",
     "com.unity.ai.navigation": "1.1.4",
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.feature.development": "1.0.1",
