Remove automatic version bumping from README files and switch to unversioned git URLs
Unity doesn't update users who install with a fixed version

- Remove sed commands that update version references in README.md and README-zh.md
- Update git add command to exclude README files from version bump commits
- Change README installation URLs from versioned (#v8.1.0) to unversioned (no tag)
- Add documentation showing how to use tagged URLs for users who need fixed versions

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -70,14 +70,6 @@ jobs:
           echo "Updating Server/pyproject.toml to $NEW_VERSION"
           sed -i '0,/^version = ".*"/s//version = "'"$NEW_VERSION"'"/' "Server/pyproject.toml"
 
-          echo "Updating README.md version references to v$NEW_VERSION"
-          sed -i 's|https://github.com/CoplayDev/unity-mcp.git?path=/MCPForUnity#v[0-9]\+\.[0-9]\+\.[0-9]\+|https://github.com/CoplayDev/unity-mcp.git?path=/MCPForUnity#v'"$NEW_VERSION"'|g' README.md
-          sed -i 's|git+https://github.com/CoplayDev/unity-mcp@v[0-9]\+\.[0-9]\+\.[0-9]\+#subdirectory=Server|git+https://github.com/CoplayDev/unity-mcp@v'"$NEW_VERSION"'#subdirectory=Server|g' README.md
-
-          echo "Updating README-zh.md version references to v$NEW_VERSION"
-          sed -i 's|https://github.com/CoplayDev/unity-mcp.git?path=/MCPForUnity#v[0-9]\+\.[0-9]\+\.[0-9]\+|https://github.com/CoplayDev/unity-mcp.git?path=/MCPForUnity#v'"$NEW_VERSION"'|g' README-zh.md
-          sed -i 's|git+https://github.com/CoplayDev/unity-mcp@v[0-9]\+\.[0-9]\+\.[0-9]\+#subdirectory=Server|git+https://github.com/CoplayDev/unity-mcp@v'"$NEW_VERSION"'#subdirectory=Server|g' README-zh.md
-
           echo "Updating Server/README.md version references to v$NEW_VERSION"
           sed -i 's|git+https://github.com/CoplayDev/unity-mcp@v[0-9]\+\.[0-9]\+\.[0-9]\+#subdirectory=Server|git+https://github.com/CoplayDev/unity-mcp@v'"$NEW_VERSION"'#subdirectory=Server|g' Server/README.md
 
@@ -89,7 +81,7 @@ jobs:
           set -euo pipefail
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git add MCPForUnity/package.json "Server/pyproject.toml" README.md README-zh.md Server/README.md
+          git add MCPForUnity/package.json "Server/pyproject.toml" Server/README.md
           if git diff --cached --quiet; then
             echo "No version changes to commit."
           else
