Revert project script change

--- a/Server/pyproject.toml
+++ b/Server/pyproject.toml
@@ -21,7 +21,7 @@ dev = [
 ]
 
 [project.scripts]
-mcp-for-unity = "src.main:main"
+mcp-for-unity = "main:main"
 
 [build-system]
 requires = ["setuptools>=64.0.0", "wheel"]
